@startuml
class AdressDTO {
}
class FindAdresses <<partial>> {
    + FindAdresses(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> ExecuteCommand() : CommandDTO
}
class GetAdress <<partial>> {
    + GetAdress(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> ExecuteCommand() : CommandDTO
}
class SetAdress <<partial>> {
    + SetAdress(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> ExecuteCommand() : CommandDTO
}
class AdressTypesDispatcher <<static>> {
    + {static} Dispatch(dto:CommandDTO) : CommandDTO
}
class "DTOValues`1"<T> {
}
class "List`1"<T> {
}
BaseDTO <|-- AdressDTO
AdressDTO --> "TypeId" Guid
AdressDTO --> "Name1" String
AdressDTO --> "Name2" String
AdressDTO --> "Adress1" String
AdressDTO --> "Adress2" String
AdressDTO --> "Housenumber" String
AdressDTO --> "City" String
AdressDTO --> "Postcode" String
CommandWrapper <|-- FindAdresses
FindAdresses --> "TypeId" Guid
FindAdresses --> "Cmd" CommandDTO
FindAdresses --> "SearchText" String
FindAdresses --> "_result<List<AdressDTO>>" "DTOValues`1"
FindAdresses --> "Result<AdressDTO>" "List`1"
CommandWrapper <|-- GetAdress
GetAdress --> "TypeId" Guid
GetAdress --> "Cmd" CommandDTO
GetAdress --> "Id" Guid
GetAdress --> "_result<AdressDTO>" "DTOValues`1"
GetAdress --> "Result" AdressDTO
CommandWrapper <|-- SetAdress
SetAdress --> "TypeId" Guid
SetAdress --> "Cmd" CommandDTO
SetAdress --> "Id" Guid
SetAdress --> "_adress<AdressDTO>" "DTOValues`1"
SetAdress --> "Adress" AdressDTO
SetAdress --> "_result<AdressDTO>" "DTOValues`1"
SetAdress --> "Result" AdressDTO
class BaseDTO <<partial>> {
    # StringFromPropertyList(list:List<PropertyDTO>, name:string) : string
    # StringToPropertyList(list:List<PropertyDTO>, name:string, newValue:string) : void
    # BooleanFromPropertyList(list:List<PropertyDTO>, name:string) : Boolean
    # BooleanToPropertyList(list:List<PropertyDTO>, name:string, newValue:Boolean) : void
}
class BaseDTO <<partial>> {
}
class PropertyDTO {
}
class ObjectDTO {
}
class TypeDTO {
}
class BaseTypesDispatcher <<static>> {
    + {static} Dispatch(dto:CommandDTO) : CommandDTO
}
class "List`1"<T> {
}
BaseDTO --> "TypeId" Guid
BaseDTO --> "Id" Guid
BaseDTO --> "Type" Guid
PropertyDTO --> "TypeId" Guid
PropertyDTO --> "Name" String
PropertyDTO --> "Value" String
BaseDTO <|-- ObjectDTO
ObjectDTO --> "TypeId" Guid
ObjectDTO --> "Properties<PropertyDTO>" "List`1"
BaseDTO <|-- TypeDTO
TypeDTO --> "TypeId" Guid
class ObjectWrapper {
    + ObjectWrapper(dto:ObjectDTO)
}
class CommandWrapper {
    + CommandWrapper(dto:CommandDTO)
    # Get(cmd:CommandDTO, name:string, target:(Func<T> get, Action<T> set)) : void
    # Get(cmd:CommandDTO, name:string, target:(Func<Guid> get, Action<Guid> set)) : void
    # Set(cmd:CommandDTO, name:string, value:T) : void
}
class StringValues <<struct>> {
    + StringValues(list:List<PropertyDTO>)
}
class StringValues {
    + StringValues(list:List<PropertyDTO>)
}
class BooleanValues {
    + BooleanValues(list:List<PropertyDTO>)
}
class GuidValues {
    + GuidValues(list:List<PropertyDTO>)
}
class "DTOValues`1"<T> {
    + DTOValues(list:List<PropertyDTO>)
}
class "List`1"<T> {
}
class "Dictionary`2"<T1,T2> {
}
class "Deserialize`1"<T> {
}
ObjectWrapper --> "_dto" ObjectDTO
ObjectWrapper --> "String" StringValues
CommandWrapper --> "Cmd" CommandDTO
CommandWrapper --> "_string" StringValues
CommandWrapper --> "_boolean" BooleanValues
CommandWrapper --> "_guid" GuidValues
CommandWrapper --> "_baseDTO<BaseDTO>" "DTOValues`1"
ObjectWrapper +-- StringValues
StringValues --> "_list<PropertyDTO>" "List`1"
CommandWrapper +-- StringValues
StringValues --> "_list<PropertyDTO>" "List`1"
CommandWrapper +-- BooleanValues
BooleanValues --> "_list<PropertyDTO>" "List`1"
CommandWrapper +-- GuidValues
GuidValues --> "_list<PropertyDTO>" "List`1"
CommandWrapper +-- "DTOValues`1"
"DTOValues`1" --> "_list<PropertyDTO>" "List`1"
"DTOValues`1" --> "_map<string,T>" "Dictionary`2"
class CommandDTO {
}
class SampleCommand <<partial>> {
    + SampleCommand(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> ExecuteCommand() : CommandDTO
}
class CommandTypesDispatcher <<static>> {
    + {static} Dispatch(dto:CommandDTO) : CommandDTO
}
class "List`1"<T> {
}
BaseDTO <|-- CommandDTO
CommandDTO --> "TypeId" Guid
CommandDTO o-> "Response" Boolean
CommandDTO o-> "Arguments<PropertyDTO>" "List`1"
CommandWrapper <|-- SampleCommand
SampleCommand --> "TypeId" Guid
SampleCommand --> "Cmd" CommandDTO
SampleCommand --> "FirstOne" String
SampleCommand --> "SecondOne" Boolean
class WeatherForecast {
    + TemperatureC : int <<get>> <<set>>
    + TemperatureF : int <<get>>
    + Summary : string <<get>> <<set>>
}
WeatherForecast --> "Date" DateTime
@enduml
